log/build_2025-09-17_11-16-32/low_level/stderr.log
  File "/home/bagus/ichimonji/odometry/install/low_level/lib/python3.10/site-packages/low_level/learn_mavros.py", line 5
    class Data_retrieve(Node);
                             ^
SyntaxError: invalid syntax

